# yata

./: .gitrepo  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.coverage  Dockerfile.cypher-server  Dockerfile.flight  Dockerfile.gateway  Dockerfile.test  LICENSE  README.md  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.wal.yml
k8s/: yata-flight.yaml
scripts/: ci-coverage.sh  ci-loadtest.sh  loadtest-wal.sh
ts/: package.json  tsconfig.json
ts/src/: catalog.ts  coordinator.ts  cypher-exec.ts  cypher-parse.ts  cypher.ts  helpers.ts  index.ts  lance-arrow.ts  lance.ts  manifest.ts  pipeline.ts  r2-reader.ts  schema.ts  types.ts  wal.ts  workers-read.ts  workers-write.ts  writer.ts
ts/test/: cypher-exec.test.ts  cypher-parse.test.ts  r2-reader.test.ts  test-helpers.ts  workers-read.test.ts
yata-arrow/: Cargo.toml
yata-arrow/src/: lib.rs
yata-at/: Cargo.toml
yata-at/src/: car.rs  dagcbor.rs  lib.rs  tests.rs
yata-b2/: Cargo.toml
yata-b2/src/: lib.rs
yata-bench/: Cargo.toml
yata-bench/src/: at_bench.rs  coo_read_bench.rs  csr_vs_lance_bench.rs  cypher_bench.rs  cypher_storage_bench.rs  cypher_transport_bench.rs  embedded_vs_cluster_bench.rs  graph_scale_bench.rs  main.rs  migrate_format_d.rs  nats_arrow_bench.rs  scale_benchmark.rs  schema_bench.rs  schema_bench_v2.rs  signal_bench.rs  tiered_bench.rs  trillion_scale_test.rs
yata-bolt/: Cargo.toml
yata-bolt/src/: lib.rs  packstream.rs  server.rs
yata-cas/: Cargo.toml
yata-cas/src/: lib.rs
yata-cbor/: Cargo.toml
yata-cbor/src/: lib.rs
yata-cdc/: Cargo.toml
yata-cdc/src/: emitter.rs  lib.rs
yata-cli/: Cargo.toml
yata-cli/src/: main.rs
yata-client/: Cargo.toml
yata-client/src/: lib.rs
yata-coordinator/: Cargo.toml
yata-coordinator/benches/: distributed_bench.rs
yata-coordinator/src/: lib.rs
yata-core/: Cargo.toml
yata-core/src/: lib.rs
yata-cypher/: Cargo.toml
yata-cypher-server/: Cargo.toml
yata-cypher-server/src/: main.rs
yata-cypher/src/: csr.rs  lib.rs  tests.rs
yata-engine/: Cargo.toml
yata-engine/lance/vertices/0/_transactions/: 0-a5345945-82de-483b-86ac-490605f59dbc.txn
yata-engine/lance/vertices/0/vertices.lance/_transactions/: 0-0388ed33-4924-44fd-ac92-a5eea0b53bc2.txn
yata-engine/src/: arrow_wal.rs  cache.rs  compaction.rs  config.rs  distributed.rs  engine.rs  federated.rs  frontier.rs  hints.rs  lib.rs  loader.rs  memory_bridge.rs  partition_query.rs  partition_router.rs  partition_snapshot.rs  partitioned_snapshot.rs  rls.rs  router.rs  sharded_coordinator.rs  snapshot.rs  sync.rs  wal.rs  writer.rs
yata-flight/: Cargo.toml  Dockerfile
yata-flight/src/: catalog.rs  codec.rs  error.rs  executor.rs  http.rs  lib.rs  main.rs  service.rs  sql_plan.rs  tests.rs
yata-format/: Cargo.toml
yata-format/src/: blob.rs  convert.rs  fragment.rs  lib.rs  nbr.rs  schema.rs  tests.rs
yata-gateway/: Cargo.toml
yata-gateway/src/: main.rs  query_api.rs
yata-gie/: Cargo.toml
yata-gie/src/: distributed_executor.rs  distributed_planner.rs  executor.rs  ir.rs  lib.rs  optimizer.rs  planner.rs  transpile.rs
yata-gie/tests/: integration.rs
yata-git/: Cargo.toml
yata-git/src/: lib.rs
yata-graph/: Cargo.toml
yata-graph/src/: cache.rs  coordinator.rs  hints.rs  lib.rs  per_label.rs  pipeline.rs  tests.rs
yata-grin/: Cargo.toml
yata-grin/src/: lib.rs
yata-hayate/: Cargo.toml
yata-hayate/src/: lib.rs
yata-kv/: Cargo.toml
yata-kv/src/: lib.rs  tests.rs
yata-lance/: Cargo.toml
yata-lance/src/: adapter.rs  catalog.rs  compat.rs  dataset.rs  lib.rs  manifest.rs  native.rs  read_store.rs  schema.rs  store.rs  table.rs  vector.rs  writer.rs
yata-log/: Cargo.toml
yata-log/src/: lib.rs  tests.rs
yata-mdag/: Cargo.toml
yata-mdag/src/: arrow_codec.rs  blocks.rs  commit.rs  deserialize.rs  diff.rs  error.rs  index.rs  lib.rs  repo.rs  serialize.rs  verify.rs
yata-nats/: Cargo.toml
yata-nats/src/: arrow_payload.rs  cdc.rs  config.rs  consumer.rs  kv.rs  lance_writer.rs  lib.rs  log.rs  object.rs
yata-object/: Cargo.toml
yata-object/src/: cas.rs  lib.rs  tests.rs
yata-ocel/: Cargo.toml
yata-ocel/src/: lib.rs  tests.rs
yata-raft/: Cargo.toml
yata-raft/src/: lib.rs  network.rs  node.rs  store.rs  tcp_transport.rs  types.rs
yata-s3/: Cargo.toml
yata-s3/src/: async_cas.rs  lib.rs  s3.rs
yata-server/: Cargo.toml
yata-server/src/: avx512_stub.rs  jwt.rs  lib.rs  main.rs  metrics.rs  rest.rs
yata-server/tests/: bench_arrow_vs_old.rs  e2e_6node.rs  e2e_minio.rs  e2e_phase3_loadtest.rs  e2e_wal_coverage.rs  e2e_wal_projection.rs  integration.rs  local_loadtest.rs  multi_did_e2e.rs  scale_projection.rs
yata-signal/: Cargo.toml
yata-signal/src/: lib.rs  tests.rs
yata-store/: Cargo.toml
yata-store/src/: arrow_codec.rs  arrow_store.rs  arrow_wal_store.rs  blob_cache.rs  blocks.rs  durable_wal.rs  durable_wal_conv.rs  graph_store_enum.rs  lib.rs  metis.rs  mirror.rs  mmap_wal_store.rs  partition.rs  partition_wal.rs  partitioned.rs  streaming.rs
yata-vex/: Cargo.toml
yata-vex/src/: distance.rs  ivf_pq.rs  lazy.rs  lib.rs  quantize.rs  storage.rs  vamana.rs
yata-vineyard/: Cargo.toml
yata-vineyard/src/: blob.rs  convert.rs  fragment.rs  lib.rs  nbr.rs  schema.rs  tests.rs
yata-wasm/: Cargo.toml
yata-wasm/lance-fork/: .gitrepo
yata-wasm/lance-fork/.devcontainer/: devcontainer.json
yata-wasm/lance-fork/rust/lance-core/: Cargo.toml
yata-wasm/lance-fork/rust/lance-core/src/: cache.rs
yata-wasm/lance-fork/rust/lance-encoding/: Cargo.toml
yata-wasm/lance-fork/rust/lance-encoding/src/: decoder.rs  encoder.rs
yata-wasm/lance-fork/rust/lance-file/: Cargo.toml
yata-wasm/lance-fork/rust/lance-file/src/: writer.rs
yata-wasm/lance-fork/rust/lance-io/: Cargo.toml
yata-wasm/lance-fork/rust/lance-io/src/: lib.rs  object_store.rs  object_writer.rs
yata-wasm/lance-fork/rust/lance-table/: Cargo.toml
yata-wasm/lance-fork/rust/yata-wasm/: Cargo.toml  build.rs
yata-wasm/src/: lib.rs
yata-wasm/test-worker/: index.ts  wrangler.jsonc
yata-wasm/test-worker/.out/: README.md  index.js  index.js.map
(+21 files in other folders)
