[workspace]
resolver = "2"
members = [
    "yata-core",
    "yata-arrow",
    "yata-log",
    "yata-kv",
    "yata-object",
    "yata-ocel",
    "yata-lance",
    "yata-b2",
    "yata-server",
    "yata-client",
    "yata-cli",
    "yata-cbor",
    "yata-cas",
    "yata-at",
    "yata-signal",
    "yata-bench",
    "yata-cypher",
    "yata-flight",
    "yata-graph",
    "yata-nats",
    "yata-raft",
    "yata-grin",
    "yata-store",
    "yata-gie",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Arrow
arrow = { version = "53", features = ["ipc"] }
arrow-array = "53"
arrow-schema = "53"
arrow-ipc = "53"
arrow-cast = "53"

# LanceDB (high-level; brings lance 0.20 + arrow 53 transitively)
lancedb = "0.14"
object_store = { version = "=0.10.2", default-features = false, features = ["aws"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "fs", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Hashing / IDs
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Bytes / IO
bytes = "1"
memmap2 = "0.9"
once_cell = "1"

# IPLD / CID (AT Protocol dag-cbor)
cid = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
smallvec = "1"
indexmap = { version = "2", features = ["serde"] }

# Arrow Flight / gRPC
arrow-flight = { version = "53", features = ["flight-sql-experimental"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

# HTTP / WebSocket (for yata-at)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Signal Protocol crypto (for yata-signal)
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Encoding utilities
hex = "0.4"
serde_bytes = "0.11"

# Internal crates
yata-core = { path = "yata-core" }
yata-arrow = { path = "yata-arrow" }
yata-log = { path = "yata-log" }
yata-kv = { path = "yata-kv" }
yata-object = { path = "yata-object" }
yata-ocel = { path = "yata-ocel" }
yata-lance = { path = "yata-lance" }
yata-b2 = { path = "yata-b2" }
yata-server = { path = "yata-server" }
yata-client = { path = "yata-client" }

# Internal crates (new)
yata-cbor = { path = "yata-cbor" }
yata-cas = { path = "yata-cas" }
yata-at = { path = "yata-at" }
yata-signal = { path = "yata-signal" }
yata-bench = { path = "yata-bench" }
yata-cypher = { path = "yata-cypher" }
yata-grin = { path = "yata-grin" }
yata-store = { path = "yata-store" }
yata-gie = { path = "yata-gie" }

yata-graph = { path = "yata-graph" }
yata-nats = { path = "yata-nats" }
yata-raft = { path = "yata-raft" }

# NATS
async-nats = "0.38"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
