[workspace]
resolver = "2"
members = [
    # Layer 0: zero deps
    "yata-core",
    "yata-grin",
    # Layer 1: core primitives
    "yata-arrow",
    "yata-object",
    # Layer 1.5: native format
    "yata-format",
    # Layer 2: graph
    "yata-cypher",
    "yata-store",
    "yata-graph",
    # Layer 3: graph engine
    "yata-gie",
    "yata-engine",
    "yata-vex",
    "yata-s3",
    "yata-lance",
    # Layer 4: protocol
    "yata-server",
    # Layer 5: dev
    "yata-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gftdcojp/yata"

[profile.dev]
debug = 1
incremental = false
codegen-units = 1

[profile.dev.package."*"]
debug = 0

[workspace.dependencies]
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
# Internal crate refs (workspace path deps)
yata-core = { path = "yata-core" }
yata-grin = { path = "yata-grin" }
yata-object = { path = "yata-object" }
yata-store = { path = "yata-store" }
yata-cypher = { path = "yata-cypher" }
yata-graph = { path = "yata-graph" }
yata-s3 = { path = "yata-s3" }
yata-engine = { path = "yata-engine" }
yata-gie = { path = "yata-gie" }
yata-vex = { path = "yata-vex" }
yata-server = { path = "yata-server" }
yata-arrow = { path = "yata-arrow" }
yata-format = { path = "yata-format" }
yata-lance = { path = "yata-lance" }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
# Arrow (aligned with lance 3.0.1)
arrow = { version = "57", features = ["ipc"] }
arrow-array = "57"
arrow-schema = "57"
arrow-ipc = "57"
arrow-cast = "57"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "fs", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Hashing / IDs
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Bytes / IO
base64 = "0.22"
bytes = "1"
memmap2 = "0.9"
once_cell = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP / REST
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
smallvec = "1"
indexmap = { version = "2", features = ["serde"] }

# Crypto (bench signing + JWT verify)
ed25519-dalek = { version = "2", features = ["rand_core"] }
ring = "0.17"
rand = "0.8"

# Parallelism
rayon = "1.10"

# rkyv zero-copy serialization (yata-core DurableWalOp types)
rkyv = { version = "0.8", features = ["bytecheck"] }

