[package]
name = "yata-arrow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arrow IPC encode/decode and versioned SchemaRegistry"

[dependencies]
yata-core.workspace = true
arrow.workspace = true
bytes.workspace = true
memmap2.workspace = true
once_cell.workspace = true
thiserror.workspace = true
