[package]
name = "yata-at"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol types, Firehose client, and bridge"

[dependencies]
yata-core.workspace = true
yata-cbor.workspace = true
yata-cas.workspace = true
yata-server.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
hex.workspace = true
serde_bytes.workspace = true
cid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
