[package]
name = "yata-b2"
version.workspace = true
edition.workspace = true

[dependencies]
yata-core.workspace = true
yata-object.workspace = true
object_store.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
ciborium.workspace = true
