[package]
name = "yata-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yata-bench"
path = "src/main.rs"

[[bin]]
name = "cypher-bench"
path = "src/cypher_bench.rs"

[dependencies]
yata-core.workspace = true
yata-arrow.workspace = true
yata-log.workspace = true
yata-kv.workspace = true
yata-object.workspace = true
yata-ocel.workspace = true
yata-server.workspace = true
yata-client.workspace = true
arrow.workspace = true
arrow-array = "53"
arrow-schema = "53"
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
tempfile = "3"
yata-cypher.workspace = true
neo4rs = "0.8"
rand = { workspace = true }
