[package]
name = "yata-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration benchmarks for the yata workspace"

[[bin]]
name = "yata-bench"
path = "src/main.rs"

[[bin]]
name = "cypher-bench"
path = "src/cypher_bench.rs"

[[bin]]
name = "cypher-transport-bench"
path = "src/cypher_transport_bench.rs"

[[bin]]
name = "schema-bench"
path = "src/schema_bench.rs"

[[bin]]
name = "schema-bench-v2"
path = "src/schema_bench_v2.rs"

[dependencies]
yata-core.workspace = true
yata-cypher.workspace = true
yata-engine.workspace = true
yata-lance.workspace = true
yata-grin.workspace = true
yata-gie.workspace = true
arrow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
rand = { workspace = true }
tempfile = "3"
memmap2 = "0.9"
libc = "0.2"

[package.metadata.cargo-machete]
ignored = ["tracing"]
