[package]
name = "yata-bolt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bolt v4 wire protocol server for Neo4j driver compatibility"

[lib]
name = "yata_bolt"
path = "src/lib.rs"

[dependencies]
yata-graph.workspace = true
tokio = { workspace = true }
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
