[package]
name = "yata-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressable storage with Blake3 hashing"

[dependencies]
yata-core.workspace = true
bytes.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tempfile"]
