[package]
name = "yata-cdc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CDC emitter for real-time graph change propagation"

[dependencies]
yata-core = { path = "../yata-core" }
yata-store = { path = "../yata-store" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
yata-grin = { path = "../yata-grin" }
