[package]
name = "yata-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async client API for yata KV, Log, and Lance stores"

[lib]
name = "yata_client"
path = "src/lib.rs"

[dependencies]
yata-core.workspace = true
yata-arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
