[package]
name = "yata-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Label-based graph partitioning with Rayon parallel shard execution"

[dependencies]
yata-grin = { path = "../yata-grin" }
yata-store = { path = "../yata-store" }
yata-gie = { path = "../yata-gie" }
rayon = { workspace = true }

[[bench]]
name = "distributed_bench"
harness = false

[dev-dependencies]
