[package]
name = "yata-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
blake3.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
smallvec.workspace = true
indexmap.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio = { workspace = true }
