[package]
name = "yata-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, error handling, and storage traits for the yata broker"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
blake3.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
indexmap.workspace = true
futures.workspace = true
rkyv.workspace = true
