[package]
name = "yata-cypher-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yata-cypher-server"
path = "src/main.rs"

[dependencies]
yata-cypher.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indexmap.workspace = true
axum = "0.8"
