[package]
name = "yata-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yata-core = { path = "../yata-core" }
yata-ocel = { path = "../yata-ocel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
