[package]
name = "yata-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust Cypher parser and execution engine"

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
regex = "1"
