[package]
name = "yata-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph engine: HOT (CSR) + YataFragment (Arrow IPC blobs)"

[dependencies]
yata-core = { path = "../yata-core" }
yata-grin = { path = "../yata-grin" }
yata-store = { path = "../yata-store" }
yata-graph = { path = "../yata-graph" }
yata-cypher = { path = "../yata-cypher" }
yata-gie = { path = "../yata-gie" }
yata-s3 = { path = "../yata-s3" }
yata-format = { path = "../yata-format" }
yata-arrow = { path = "../yata-arrow" }
yata-lance = { path = "../yata-lance" }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }

[features]
default = ["native-lance"]
native-lance = ["yata-lance/native-lance"]

[dev-dependencies]
tempfile = "3"
