[package]
name = "yata-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph engine: Lance-backed read store with WAL projection"

[dependencies]
yata-core = { path = "../yata-core" }
yata-grin = { path = "../yata-grin" }
yata-cypher = { path = "../yata-cypher" }
yata-gie = { path = "../yata-gie" }
yata-s3 = { path = "../yata-s3" }
yata-lance = { path = "../yata-lance" }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
object_store = "0.12"
url = "2"
chrono = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
