[package]
name = "yata-flight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Arrow Flight SQL endpoint for yata graph engine"

[features]
default = ["http"]
http = ["axum", "tower"]
grpc = ["arrow-flight", "tonic", "futures"]

[dependencies]
yata-grin = { workspace = true }
yata-arrow = { workspace = true }
yata-store = { workspace = true }
arrow = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

sqlparser = { version = "0.53", features = ["visitor"] }

# HTTP endpoint (CF Container — default)
axum = { workspace = true, optional = true }
tower = { version = "0.5", optional = true }

# gRPC endpoint (opt-in)
arrow-flight = { version = "53", features = ["flight-sql-experimental"], optional = true }
tonic = { version = "0.12", optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt"] }
