[package]
name = "yata-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YataFragment: native property graph snapshot format for yata graph engine"

[dependencies]
yata-arrow = { workspace = true }
yata-grin = { path = "../yata-grin" }
yata-core = { path = "../yata-core" }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
