[package]
name = "yata-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone query gateway: Bolt + Flight SQL + Neo4j Query API v2"

[[bin]]
name = "yata-gateway"
path = "src/main.rs"

[dependencies]
yata-server.workspace = true
yata-flight = { path = "../yata-flight" }
yata-bolt = { path = "../yata-bolt" }
yata-graph.workspace = true
yata-b2 = { path = "../yata-b2" }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
