[package]
name = "yata-gie"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph Interactive Engine with IR operators and push-based executor"

[dependencies]
yata-grin = { path = "../yata-grin" }
yata-store = { path = "../yata-store" }

[dev-dependencies]
