[package]
name = "yata-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph store with Cypher query engine and vector search (in-memory + yata-vex)"

[dependencies]
yata-cypher = { path = "../yata-cypher" }
yata-vex = { path = "../yata-vex" }
arrow-array = "57"
arrow-schema = "57"
tokio.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.cargo-machete]
ignored = ["tempfile"]
