[package]
name = "yata-grin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GRIN storage-agnostic graph access traits (Topology, Property, Schema, Mutable, Partitioned)"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
