[package]
name = "yata-kv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KV store with TTL enforcement, backed by append-only log"

[dependencies]
yata-core.workspace = true
yata-log.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
ciborium.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
