[package]
name = "yata-lance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lance Dataset persistence for yata graph"

[dependencies]
# Arrow (aligned with lance 3.0.1)
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Lance Dataset API (no cloud features — yata uses local/S3 via object_store directly)
lance = { version = "3.0", default-features = false }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Force rustls to use ring (not aws-lc-rs) for cross-compile compat
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }

# Serialization / IO
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
