[package]
name = "yata-lance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lance Dataset persistence for yata graph"

[dependencies]
# Arrow (aligned with lance 3.0.1)
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Lance Dataset API (no cloud features — yata uses local/S3 via object_store directly)
lance = { version = "3.0", default-features = false }
lance-arrow = "3.0"
lance-index = "3.0"
lance-linalg = "3.0"
lance-table = "3.0"

# ObjectStore trait (same version as lance 3.0 transitive dep)
object_store = "0.12"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Force rustls to use ring (not aws-lc-rs) for cross-compile compat
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }

# Serialization / IO
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
bytes.workspace = true
url = "2"
yata-cypher = { path = "../yata-cypher" }
yata-grin = { path = "../yata-grin" }
yata-s3 = { path = "../yata-s3" }

[dev-dependencies]
tempfile = "3"
