[package]
name = "yata-lance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LanceDB persistence for yata graph"

[dependencies]
# Arrow (aligned with lancedb 0.27)
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# LanceDB — high-level API (embeds lance 4.0, object_store, S3 support)
lancedb = { version = "0.27", default-features = false, features = ["aws"] }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Force rustls to use ring (not aws-lc-rs) for cross-compile compat
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }

# Serialization / IO
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
bytes.workspace = true
yata-cypher = { path = "../yata-cypher" }
yata-grin = { path = "../yata-grin" }

[dev-dependencies]
tempfile = "3"
