[package]
name = "yata-log"
version.workspace = true
edition.workspace = true

[dependencies]
yata-core.workspace = true
yata-arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
crc32fast = "1"
