[package]
name = "yata-mdag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Merkle DAG graph sync with CBOR blocks and time-travel checkout"

[dependencies]
yata-core = { path = "../yata-core" }
yata-cas = { path = "../yata-cas" }
yata-cbor = { path = "../yata-cbor" }
yata-grin = { path = "../yata-grin" }
yata-store = { path = "../yata-store" }
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { workspace = true }
