[package]
name = "yata-nats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yata-core = { workspace = true }
yata-arrow = { path = "../yata-arrow" }

async-nats = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }

# Arrow (for batch payload encoding)
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# LanceDB (for NatsLanceWriter consumer)
lancedb = { workspace = true }

# time crate (async-nats uses time, not chrono, for timestamps)
time = "0.3"
