[package]
name = "yata-object"
version.workspace = true
edition.workspace = true

[dependencies]
yata-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
